# cppGbBeginner

11/: ButtonAdd.qml  Homework_11.pro  main.cpp  main.qml  tablesqlview.cpp  tablesqlview.h  tascs.cpp  tascs.h
12/: Homework_12.pro  README.md  downloader.cpp  downloader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsetext.cpp  parsetext.h
3/: dating.qml  ex2and3.qml
4/: chart.cpp  chart.h  chart.pro  main.cpp
5/: CanvasJs.js  canvasJs.pro  main.cpp  main.qml
7/: any.pro  dbHelpers.js  main.cpp  main.qml  main.qrc
8/: CMakeLists.txt  ToolBar.qml  gallery.cpp  gallery.qml
GoF_Patterns_HW1/: FileLoggerSingleton.h  Logger.h  LoggerSingleton.cpp
GoF_Patterns_HW2/: BombDecorator.cpp  BombDecorator.h  DeleteDynamicObjectCommand.h  DeleteStaticObjectCommand.cpp  DropBombCommand.h
GoF_Patterns_HW3/: BombIterator.cpp  BombIterator.h  IBomb.h  SBomber.h  TankAdapter.cpp
GoF_Patterns_HW4/: CommonGround.h  Ground.h  House.h  HouseDirector.h  SBomber.cpp  SBomberProject.cpp  StairsHouseBuilder.cpp  WinterGround.cpp
GoF_Patterns_HW5/: Bomb.cpp  Bomb.h  BombCollisionObserver.h  BombDecorator.cpp  CollisionEvent.cpp  CollisionEvent.h  DropBombCommand.cpp  DropDecoratedBombCommand.cpp  IBomb.h  IVisitor.h  Level.h  LogVisitor.cpp  LoggerSingleton.cpp  LoggerSingleton.h  Plane.h  SBomber.cpp
HW1/: BombCollisionObserver.cpp  BombDecorator.h  IObservable.h  Level.cpp  LogVisitor.h  SBomber.h  log.txt
HW2/: FileLoggerSingleton.cpp  (+2 more)
hw7/: CMakeLists.txt
hw7/include/: generate_classes.txt  students.pb.cc  students.pb.h  students.proto
hw7/src/: main.cpp
(+206 files in other folders)
